--- a/html/my-favorites.html
+++ b/html/my-favorites.html
@@ -545,59 +545,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -610,47 +652,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -663,35 +738,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
@@ -842,59 +941,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -907,47 +1048,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -960,35 +1134,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
