--- a/html/set-password.html
+++ b/html/set-password.html
@@ -294,59 +294,59 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu2">
@@ -356,47 +356,47 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu3">
@@ -406,35 +406,35 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu4">
@@ -537,59 +537,59 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu2">
@@ -599,47 +599,47 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu3">
@@ -649,35 +649,35 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu4">
