--- a/html/signup.html
+++ b/html/signup.html
@@ -318,59 +318,59 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu2">
@@ -380,47 +380,47 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu3">
@@ -430,35 +430,35 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu4">
@@ -561,59 +561,59 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu2">
@@ -623,47 +623,47 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu3">
@@ -673,35 +673,35 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu4">
