--- a/html/add-details.html
+++ b/html/add-details.html
@@ -582,59 +582,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -647,47 +689,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -700,35 +775,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
@@ -879,59 +978,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -944,47 +1085,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -997,35 +1171,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
