--- a/html/forget-password.html
+++ b/html/forget-password.html
@@ -279,59 +279,59 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu2">
@@ -341,47 +341,47 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu3">
@@ -391,35 +391,35 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu4">
