--- a/html/login.html
+++ b/html/login.html
@@ -298,59 +298,59 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu2">
@@ -360,47 +360,47 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu3">
@@ -410,35 +410,35 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img src="../assets/images/right__arrow.svg" class="modal__arrow" />
 						</p>
 					</div>
 					<div class="submenu4">
