--- a/html/my-add-details.html
+++ b/html/my-add-details.html
@@ -588,59 +588,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -653,47 +695,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -706,35 +781,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
@@ -885,59 +984,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -950,47 +1091,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -1003,35 +1177,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
