--- a/html/safety-rules.html
+++ b/html/safety-rules.html
@@ -441,59 +441,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -506,47 +548,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -559,35 +634,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
@@ -738,59 +837,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -803,47 +944,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -856,35 +1030,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
