--- a/html/seller.html
+++ b/html/seller.html
@@ -511,59 +511,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -576,47 +618,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -629,35 +704,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
@@ -808,59 +907,101 @@
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu__link">
 							car
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu2">
@@ -873,47 +1014,80 @@
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu2__link">
 							used cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu3">
@@ -926,35 +1100,59 @@
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 						<p class="submenu3__link">
 							American cars
-							<img src="../assets/images/right__arrow.svg" />
+							<img
+								src="../assets/images/right__arrow.svg"
+								class="modal__arrow"
+							/>
 						</p>
 					</div>
 					<div class="submenu4">
